# project_three

./: .dockerignore  .env  .env.example  .flake8  .gitignore  Dockerfile  README.md  catalog_fixture.json  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
blog/: admin.py  models.py  tests.py  urls.py  views.py
blog/fixtures/: posts.json
blog/migrations/: 0001_initial.py
blog/templates/blog/: base.html  delete_post.html  post_detail.html  post_form.html  posts_list.html
blog/templatetags/: blog_tags.py
catalog/: admin.py  constants.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_products.py  add_products_from_fixture.py  clean_data_base.py
catalog/migrations/: 0001_initial.py  0002_alter_category_description_alter_category_name_and_more.py  0003_alter_product_options_product_is_published_and_more.py
catalog/templates/: base.html  base_.html  contacts.html  home.html  product_detail.html  product_list.html
catalog/templates/catalog/: base.html  confirm_delete.html  contacts.html  form_product.html  product_detail.html  product_list.html  products_by_category.html
catalog/templates/includes/: inc_menu.html
catalog/templatetags/: catalog_tags.py  my_tags.py
config/: settings.py  urls.py
nginx/: nginx.conf
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token_alter_user_avatar.py
users/templates/: login.html
users/templates/users/: user_form.html
(+3 files in other folders)
